<resources>
    <string name="app_name">UnitonApplication</string>

    <string name="main_company">유니톤</string>
    <string name="main_company_postposition">에서</string>
    <string name="main_date">45</string>
    <string name="main_date_postposition">일째 출근 중</string>
    <string name="main_myinfo">내 정보</string>
    <string name="main_resign_preposition">완성도 : </string>
    <string name="main_resign">1</string>
    <string name="main_resign_postposition">/5</string>
    <string name="main_resign_write">사직서 쓰기</string>
    <string name="main_myresign_preposition">내가 품은 사직서 : </string>
    <string name="main_myresign">8</string>
    <string name="main_myresign_postposition">개</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
