<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout 
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  tools:context=".MainActivity">

  <android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.CollapsingToolbarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white0"
      android:fitsSystemWindows="true"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

              <TextView
                android:id="@+id/textView_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_company"
                android:textColor="@color/black0" />

              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_company_postposition"
                android:textColor="@color/black0" />
            </LinearLayout>

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

              <TextView
                android:id="@+id/textView_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_date"
                android:textColor="@color/black0" />

              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_date_postposition"
                android:textColor="@color/black0" />
            </LinearLayout>
          </LinearLayout>

          <TextView
            android:id="@+id/textView_myinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_myinfo"
            android:textColor="@color/black0" />

        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center"
          android:padding="12dp">

          <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_main"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:orientation="vertical">
            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="end"
              android:orientation="horizontal">
              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black0"
                android:text="@string/main_resign_preposition"/>
              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black0"
                android:text="@string/main_resign"/>
              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black0"
                android:text="@string/main_resign_postposition"/>
            </LinearLayout>
            
            <ImageView
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:src="@mipmap/ic_launcher"/>
            
            <Button
              android:layout_width="match_parent"
              android:layout_height="60dp"
              android:text="@string/main_resign_write"
              />

          </LinearLayout>

        </LinearLayout>

      </LinearLayout>

    </android.support.design.widget.CollapsingToolbarLayout>

  </android.support.design.widget.AppBarLayout>

  <android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white0"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.RecyclerView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/white0">

    </android.support.v7.widget.RecyclerView>

  </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>